# grust

./: .gitignore  .gitlab-ci.yml  .gitmodules  Android.bp  Cargo.toml  LICENSE  README.md  build.rs  clippy.toml  perf.md  readme.md  reunion_baptiste_seb_xavier.txt
compiler/: Cargo.toml
compiler/src/: backend.rs  conf.rs  error.rs  ext.rs  frontend.rs  hir.rs  into_lir.rs  lib.rs  prelude.rs  symbol_table.rs
compiler/src/ast/: colon.rs  component.rs  config.rs  contract.rs  equation.rs  expression.rs  function.rs  ident_colon.rs  interface.rs  keyword.rs  mod.rs  pattern.rs  statement.rs  stream_expression.rs  typedef.rs
compiler/src/backend/: rust_ast_from_lir.rs
compiler/src/common/: color.rs  constant.rs  convert_case.rs  label.rs  location.rs  mod.rs  operator.rs  scope.rs  type.rs
compiler/src/ext/: hir_ext.rs
compiler/src/frontend/: causality_analysis.rs  dependency_graph.rs  hir_from_ast.rs  into_hir.rs  into_lir.rs  normalizing.rs  typing_analysis.rs
compiler/src/hir/: component.rs  contract.rs  ctx.rs  dependencies.rs  expr.rs  expression.rs  file.rs  flow.rs  flow_expression.rs  flow_statement.rs  function.rs  identifier_creator.rs  interface.rs  memory.rs  mod.rs  node.rs  once_cell.rs  pattern.rs  statement.rs  stmt.rs  stream.rs  stream_expression.rs  typedef.rs  unitary_node.rs
compiler/src/into_lir/: component.rs  contract.rs  expression.rs  file.rs  function.rs  interface.rs  pattern.rs  statement.rs  stream_expression.rs  typedef.rs
compiler/src/lir/: block.rs  contract.rs  expression.rs  mod.rs  pattern.rs  statement.rs
compiler/tests/: aeb.rs  automaton.rs  counter.rs  define_events.rs  fibo.rs  multiple_events.rs  para.rs  rising_edges.rs  speed_limiter.rs  speed_limiter_events.rs  speed_limiter_onchange.rs  two_speed_limiters.rs
compiler/tests/macro_outputs/: aeb.rs  automaton.rs  counter.rs  define_events.rs  fibo.rs  multiple_events.rs  para.rs  rising_edges.rs  speed_limiter.rs  speed_limiter_events.rs  speed_limiter_onchange.rs  two_speed_limiters.rs
compiler_common/: Android.bp  Cargo.toml
compiler_common/examples/: synced0.rs  synced1.rs  synced2.rs  synced3.rs  synced_cycle.rs  synced_ignore.rs  synced_sub.rs
compiler_common/src/: check.rs  color.rs  conf.rs  constant.rs  convert_case.rs  equiv.rs  err.rs  error.rs  ext.rs  graph.rs  hash_map.rs  keyword.rs  label.rs  lib.rs  location.rs  mk_new_def.rs  op.rs  operator.rs  para.rs  prelude.rs  scope.rs  serialize.rs  stats.rs  synced.rs  typ.rs  type.rs
compiler_common/src/synced/: generic.rs
compiler_ir2/: Android.bp  Cargo.toml
compiler_ir2/src/: defs.rs  execution_machine.rs  expression.rs  ir1_into_ir2.rs  lib.rs  pattern.rs  prelude.rs  state_machine.rs  stmt.rs
compiler_ir2/src/defs/: block.rs  contract.rs  expression.rs  item.rs  para.rs  pattern.rs  project.rs  stmt.rs
compiler_ir2/src/execution_machine/: runtime_loop.rs  service_handler.rs
compiler_ir2/src/ir1_into_ir2/: interface.rs  isles.rs  trigger.rs
compiler_ir2/src/item/: enumeration.rs  import.rs  structure.rs
compiler_top/: Android.bp  Cargo.toml
compiler_top/src/: lib.rs  prelude.rs
compiler_top/tests/: acc.rs  acc_greusot.rs  aeb.rs  aeb_greusot.rs  aeb_time.rs  aeb_time_persist.rs  automaton.rs  counter.rs  define_events.rs  fibo.rs  import.rs  multiple_events.rs  para.rs  rising_edges.rs  sensor_fusion.rs  speed_limiter.rs  speed_limiter_events.rs  speed_limiter_onchange.rs  two_comp_in_one_service.rs  two_speed_limiters.rs
compiler_top/tests/macro_outputs/: acc.rs  acc_greusot.rs  aeb.rs  aeb_greusot.rs  aeb_time.rs  aeb_time_persist.rs  automaton.rs  counter.rs  define_events.rs  fibo.rs  import.rs  multiple_events.rs  para.rs  para_custom.rs  para_mixed.rs  para_rayon1.rs  para_rayon2.rs  para_rayon3.rs  para_threads.rs  rising_edges.rs  sensor_fusion.rs  speed_limiter.rs  speed_limiter_events.rs  speed_limiter_onchange.rs  two_comp_in_one_service.rs  two_speed_limiters.rs
examples/aeb/: Cargo.toml  README.md  build.rs
examples/aeb/data/: inputs.json  outputs.json
examples/aeb/src/: aeb.rs  client.rs  interface.proto  lib.rs  macro_output.rs  main.rs  output.rs  server.rs
examples/aeb_async_std/: Cargo.toml
examples/aeb_async_std/data/: inputs.json  outputs.json
examples/aeb_async_std/src/: main.rs
examples/aeb_demo_async_std/: Cargo.toml
examples/aeb_demo_async_std/src/: main.rs
examples/merge_at_init/: Cargo.toml
examples/merge_at_init/src/: lib.rs
examples/para/: Cargo.toml  build.rs
examples/para/data/: inputs.json  outputs.json
examples/para/src/: client.rs  interface.proto  lib.rs  macro_output.rs  server.rs
examples/periodic_tests/: Cargo.toml
examples/scan_sample/: Cargo.toml
examples/sl_demo/: Cargo.toml  build.rs
examples/speed_limiter/: Cargo.toml
examples/two_speed_limiters/: Cargo.toml  build.rs
greact/: Android.bp  Cargo.toml
greact/src/: event.rs  lib.rs  signal.rs
greact/stream_proc_macros/: .gitignore  Android.bp  Cargo.toml
greact/tests/: mod.rs  readme.md
grust/: Android.bp  Cargo.toml
grust/src/: lib.rs
grust/tests/: acc.rs  aeb.rs  aligned.rs  array_operations.rs  automaton.rs  binop_unop.rs  causality_failure.rs  counter.rs  dump_graph.rs  fibo.rs  fibo_para.rs  fun_call_service.rs  import_counter.rs  init_struct.rs  maths_fun.rs  merge_at_init.rs  multi_events.rs  para_comp.rs  para_service.rs  period.rs  speed_limiter.rs  speed_limiter_events.rs  tracing.rs  when_causality.rs
grust_compiler_ir2/: Cargo.toml
grust_compiler_ir2/src/: defs.rs  ir1_into_ir2.rs  prelude.rs
grust_compiler_top/: Cargo.toml
grust_compiler_top/src/: lib.rs  prelude.rs
grust_compiler_top/tests/: acc.rs  acc_greusot.rs  aeb.rs  aeb_greusot.rs  aeb_time.rs  aeb_time_persist.rs  automaton.rs  counter.rs  define_events.rs  fibo.rs  import.rs  multiple_events.rs  para.rs  rising_edges.rs  sensor_fusion.rs  speed_limiter.rs  speed_limiter_events.rs  speed_limiter_onchange.rs  two_comp_in_one_service.rs  two_speed_limiters.rs
grust_proc/: Cargo.toml
grust_proc/src/: lib.rs
proc/: Android.bp  Cargo.toml
proc/src/: lib.rs
(+1223 files in other folders)
