[workspace]
resolver = "2"
exclude = ["creusot"]
members = [
    "proc",
    "grust",
    "examples/*",
    "compiler_common",
    "compiler_ir0",
    "compiler_ir1",
    "compiler_ir2",
    "compiler_top",
    "priority_stream",
    "timer_stream",
    "json",
    "grust_std",
]

[workspace.package]
# license-file = "LICENSE"
version = "1.4.0"
edition = "2021"
# publish = false

# Alignment to google requirements
[workspace.lints.rust]
unknown_lints = "allow"
deprecated = "allow"
# missing-docs = "deny"
unsafe_op_in_unsafe_fn = "deny"
warnings = "deny"

[workspace.lints.clippy]
# android denied rules
undocumented_unsafe_blocks = "deny"

# better cargo:
multiple_crate_versions = "warn"
negative_feature_names = "warn"
redundant_feature_names = "warn"
wildcard_dependencies = "warn"

[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace.dependencies]
rustc-hash = "^1.1"
quote = "^1"
syn = { version = "^2", features = ["full", "extra-traits"] }
proc-macro2 = "^1"
lazy_static = "^1.4"
serde = { version = "^1.0", features = ["derive"] }
strum = { version = "0.21", features = ["derive"] }
petgraph = { version = "0.6.4", features = ["serde-1"] }
once_cell = "^1.19"
itertools = "^0.12"
either = "^1.13" # to replace
rayon = "^1.10"
futures = "^0.3"
pin-project = "1.1.5"
rand = "0.8.5"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.14"
serde_json = "1.0.82"
prost = "0.12"
prost-types = "0.12"
tonic = "0.11.0"
tonic-build = "0.11.0"

compiler_common = { path = "./compiler_common" }
compiler_ir0 = { path = "./compiler_ir0" }
compiler_ir1 = { path = "./compiler_ir1" }
compiler_ir2 = { path = "./compiler_ir2" }
compiler_top = { path = "./compiler_top" }

json = { path = "./json" }
proc = { path = "./proc" }
creusot-contracts = { path = "./creusot/creusot-contracts" }

priority_stream = { path = "./priority_stream" }
timer_stream = { path = "./timer_stream" }

grust_std = { path = "./grust_std" }
grust_core = { path = "./grust_core" }
grust = { path = "./grust" }
