[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = { version = "^1" }
syn = { version = "^2", features = ["full", "extra-traits"] }
proc-macro2 = "^1"
lazy_static = "^1.4"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.21", features = ["derive"] }
petgraph = { version = "0.6.4", features = ["serde-1"] }
codespan-reporting = "0.11.1"
once_cell = "1.19.0"
itertools = "0.12.1"
