[package]
name = "compiler_common"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
diagnostics = []
no_diagnostics = []

[dependencies]
# custom hashing so that hashmap order is deterministic
rustc-hash = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
json = { workspace = true }
strum = { workspace = true }
petgraph = { workspace = true }
once_cell = { workspace = true }
itertools = { workspace = true }
rustversion = {workspace = true}

# codespan-reporting = "0.11.1"
# proc_macro = "^1.83"
