[package]
name = "compiler_ir2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compiler_common = { path = "../compiler_common" }
compiler_ir0 = { path = "../compiler_ir0" }
compiler_ir1 = { path = "../compiler_ir1" }
