[package]
name = "compiler_ir2"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compiler_common = {workspace = true}
compiler_ir0 = {workspace = true}
compiler_ir1 = {workspace = true}

[dev-dependencies]
rayon = {workspace = true}
