[package]
name = "compiler_top"
version.workspace = true
edition.workspace = true

[features]
default = []
no_diagnostics = [
    "compiler_common/no_diagnostics",
    "compiler_ir0/no_diagnostics",
    "compiler_ir1/no_diagnostics",
    "compiler_ir2/no_diagnostics",
]

[dependencies]
compiler_common = { workspace = true}
compiler_ir0 = { workspace = true }
compiler_ir1 = { workspace = true }
compiler_ir2 = { workspace = true }
