[package]
name = "greact"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = {workspace = true}
futures = {workspace = true}
pin-project = {workspace = true}
rand = {workspace = true}
tokio = {workspace = true}
tokio-stream = {workspace = true}
stream_proc_macros = {workspace = true}
shared_stream = {workspace = true}
