[package]
name = "grust"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["diagnostics"]
diagnostics = ["proc/diagnostics"]

[dependencies]
proc = { workspace = true }
grust_std = { workspace = true }
grust_core = { workspace = true }
