[package]
name = "grust"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["diagnostics"]
diagnostics = ["grust_proc/diagnostics"]

[dependencies]
grust_proc = { workspace = true }
grust_std = { workspace = true }
grust_core = { workspace = true }
tracing = { workspace = true }
