[package]
name = "proc"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[features]
no_diagnostics = [
    "compiler_top/no_diagnostics",
]

[dependencies]
compiler_top = { workspace = true }
