[package]
name = "aeb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grust = { path = "../../grust" }
priority_stream = { path = "../../priority_stream" }
tokio = { version = "1.38.0", features = ["time"] }
creusot-contracts = { path = "../../creusot/creusot-contracts" }
