[package]
name = "aeb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grust = { path = "../../grust" }
tokio = { version = "1.38.0", features = ["full"] }
futures = "0.3.30"
prost = "0.12"
prost-types = "0.12"

[build-dependencies]
prost-build = "0.5"
