[package]
name = "aeb_async_std"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grust = { workspace = true }
async-std = { version = "1.7.0", features = ["attributes", "tokio1"] }
json = { workspace = true }
serde = { workspace = true }
