[package]
name = "aeb_demo_async_std"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grust = { workspace = true }
json = { workspace = true }
priority_stream = { workspace = true }
timer_stream = { workspace = true }
async-std = { version = "1.7.0", features = ["attributes", "tokio1"] }
futures = { workspace = true }
serde = { workspace = true }
