[package]
name = "para"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grust = { path = "../../grust" }
tokio = { version = "1.38.0", features = ["macros"] }
priority_stream = { path = "../../priority_stream" }
timer_stream = { path = "../../timer_stream" }
futures = "0.3.30"
