[package]
name = "periodic_tests"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grust = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
priority_stream = { workspace = true }
timer_stream = { workspace = true }
