[package]
name = "scan_sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grust = { path = "../../grust" }
json = { path = "../../json" }
priority_stream = { path = "../../priority_stream" }
timer_stream = { path = "../../timer_stream" }
tokio = { version = "1.38.0", features = ["full"] }
futures = "0.3.30"
serde = { version = "1.0.139", features = ["derive"] }
lazy_static = "1.4.0"
pin-project = "1.1.5"

[build-dependencies]
tonic-build = "0.11.0"
