[package]
name = "sl_demo"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grust = { workspace = true }
json = { workspace = true }
priority_stream = { workspace = true }
timer_stream = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
lazy_static = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[[bin]]
name = "sl-demo-server"
path = "src/server.rs"

[[bin]]
name = "sl-demo-client"
path = "src/client.rs"
