[package]
name = "speed_limiter"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grust = { workspace = true }
priority_stream = { workspace = true }
timer_stream = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
