[package]
name = "two_speed_limiters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grust = { path = "../../grust" }
priority_stream = { path = "../../priority_stream" }
timer_stream = { path = "../../timer_stream" }
tokio = "1.37.0"
futures = "0.3.30"
