[package]
name = "stream_proc_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
pin-project = "1.1.5"
proc-macro2 = "1.0.79"
quote = "1.0.35"
syn = { version = "2.0.55", features = ["full"] }

[lib]
proc-macro = true
